--- a/course-project-starting-setup/public/index.html
+++ b/course-project-starting-setup/public/index.html
@@ -13,6 +13,18 @@
   <link rel="stylesheet" href="/src/css/app.css">
   <link rel="stylesheet" href="/src/css/feed.css">
   <link rel="manifest" href="/manifest.json">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="PWAGram">
+  <meta name="apple-touch-icon" href="/src/images/icons/apple-icon-57x57.png" sizes="57x57">
+  <meta name="apple-touch-icon" href="/src/images/icons/apple-icon-60x60.png" sizes="60x60">
+  <meta name="apple-touch-icon" href="/src/images/icons/apple-icon-72x72.png" sizes="72x72">
+  <meta name="apple-touch-icon" href="/src/images/icons/apple-icon-76x76.png" sizes="76x76">
+  <meta name="apple-touch-icon" href="/src/images/icons/apple-icon-114x114.png" sizes="114x114">
+  <meta name="apple-touch-icon" href="/src/images/icons/apple-icon-120x120.png" sizes="120x120">
+  <meta name="apple-touch-icon" href="/src/images/icons/apple-icon-144x144.png" sizes="144x144">
+  <meta name="apple-touch-icon" href="/src/images/icons/apple-icon-152x152.png" sizes="152x152">
+  <meta name="apple-touch-icon" href="/src/images/icons/apple-icon-180x180.png" sizes="180x180">
 </head>
 <body>
 
